--- a/style.css
+++ b/style.css
@@ -740,7 +740,7 @@ h4 {
 }
 
 .portfolio-thumb {
-    margin-bottom: 24px;
+    margin:0 auto 24px auto;
 }
 
 .portfolio-row {
@@ -890,6 +890,10 @@ h4 {
 }
 
 @media (max-width: 767px) {
+
+    
+
+    
     .page-container {
         overflow-x: hidden;
         position: relative;
