--- a/style.css
+++ b/style.css
@@ -18,6 +18,50 @@ a:hover {
     cursor: pointer;
 }
 
+footer a{
+    color: #404040 !important;
+}
+
+.grey{
+    color: #404040!important;
+    
+}
+
+.col-sm-12{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.col-sm-12 h2{
+    width: 650px;
+    
+    
+}
+
+    
+blockquote {
+    color: #575757;
+    
+    font-size: 20px;
+    font-weight: 400;
+    font-style: italic;
+    width: 550px;
+    padding: 0px;
+    margin-bottom: 0;
+    border-left: none;
+}
+.width-2 h2{
+    width:450px !important;
+}
+figcaption{
+    color: #575757;
+    
+    font-size: 20px;
+    font-weight: 100;
+    
+    width: 550px;
+
+}
 #page-loading-blocs-notifaction {
     position: fixed;
     top: 0;
@@ -845,6 +889,10 @@ h4 {
     }
     .nav-center.navbar .nav {
         max-width: 100%
+    }
+
+    blockquote{
+        width: fit-content;
     }
 }
 
