--- a/style.css
+++ b/style.css
@@ -829,7 +829,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #404040!important;
 }
 
 .btn-atomic-tangerine:hover {
