add minify css page2 + min change style

--- a/style.css
+++ b/style.css
@@ -846,11 +846,11 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #221f1e!important;
 }
 
 .ltc-atomic-tangerine:hover {
-    color: #c27956!important;
+    color: #c25522!important;
 }
 
 .icon-dark-slate-blue {
